<resources>
    <string name="app_name">PokeDEX</string>
    <string name="preview">Preview</string>
    <string name="tap_to_search">Search your pokemon</string>
    <string name="release_date">Available from</string>
    <string name="tap_icon">Press to search</string>
    <string name="hp">HP</string>
    <string name="speed">Speed</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="super_attack">Special Attack</string>
    <string name="super_defense">Special Defense</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="types">Types</string>
    <string name="retry">Retry</string>
    <string name="sprites">Classic Sprites</string>
    <string name="error">there seems to have been an error\nPress the button to try again</string>
</resources>